finish header, float, 404 page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,4 +41,9 @@
     <!-- external CSS link -->
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
+    <!-- font -->
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Comfortaa|Emblema+One|Merienda+One|Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
+
 </head>
