--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,16 @@
 ---
 
 {% include_relative normalize.css %}
+
+/*
+ *  
+ *  #8DC211 green
+ *  #F57E03 orange
+ *  #039AE7 blue
+ *
+ */
+
+{% include_relative style.css %}
+{% include_relative header.css %}
+{% include_relative follow.css %}
+{% include_relative float.css %}
