--- a/_includes/follow.html
+++ b/_includes/follow.html
@@ -44,7 +44,7 @@
     {% endif %}   
 
     {% if site.linkedin-usrname %}
-        <a href="https://www.linkedin/in/{{ site.linkedin-usrname }}" target="_blank" rel="">
+        <a href="https://www.linkedin.com/in/{{ site.linkedin-usrname }}" target="_blank" rel="">
             <span class="follow-icon">
                 <i class="i-linkedin"></i>
             </span>
