--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
     <!-- font -->
+    <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css"> <!-- font awesome -->
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Comfortaa|Emblema+One|Merienda+One|Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
